--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       - npm build
   post_build:
     commands:
-      - npm run serve
+      - echo nothing to do
 artifacts:
   files:
     - '**/*'
