--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,10 +6,10 @@ phases:
       - npm install -g yarn
   pre_build:
     commands:
-      - npm install
+      - yarn install
   build:
     commands:
-      - npm build
+      - yarn build
   post_build:
     commands:
       - echo nothing to do
