--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,41 @@
 version: 0.2
-
 phases:
   install:
     commands:
-      - npm install -g yarn
+      - echo Entered the install phase...
+      - echo Installing dependecies
+      - sudo apt-get update -y && sudo apt-get install -y make apt-transport-https
+      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+      - sudo apt-get update -y && sudo apt-get install -y yarn
   pre_build:
     commands:
+      - echo Entered the pre_build phase...
       - yarn install
   build:
     commands:
-      - yarn build
+      - echo Entered the build phase...
+      - echo Build started on `date`
+      - yarn run build
   post_build:
     commands:
-      - echo nothing to do
-artifacts:
-  files:
-    - type: zip
-    - '**/*'
-  base-directory: dist
+      - echo Entered the post_build phase...
+      - mkdir tmp
+      - find ./dist -name '*.js.gz' -exec cp --parents \{\} ./tmp/ \;
+      - find ./dist -name '*.css.gz' -exec cp --parents \{\} ./tmp/ \;
+      - find ./dist -name '*.jpg' -exec cp --parents \{\} ./tmp/ \;
+      - find ./dist -name '*.json' -exec cp --parents \{\} ./tmp/ \;
+      - find ./dist -name 'index.html' -exec cp --parents \{\} ./tmp/ \;
+      - find ./dist -name 'favicon.ico' -exec cp --parents \{\} ./tmp/ \;
+      - echo Synchronisation to S3
+      - for x in $(find tmp -name \*.gz); do  mv $x $(echo "$x" | sed 's/\.gz$//'); done
+      - aws s3 sync ./tmp/dist s3://<s3 bucket>/ --region ap-southeast-1 --delete --acl public-read
+      - aws s3 cp s3://<s3 bucket>/js s3://<s3 bucket>/js --recursive --metadata-directive REPLACE --content-encoding 'gzip' --acl public-read
+      - aws s3 cp s3://<s3 bucket>/css s3://<s3 bucket>/css --recursive --metadata-directive REPLACE --content-encoding 'gzip' --acl public-read
+      - echo Build completed on `date`
+cache:
+  paths:
+    # Debian package caches, so we don't need to keep redownloading debian packages:
+    - /var/cache/apt/**/*
+    - /var/lib/apt/lists/**/*
+    - node_modules/**/*
