--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,8 @@ phases:
       - npm install -g yarn
   pre_build:
     commands:
-      - yarn install
+      - yarn
+      - npm install -g jest
   build:
     commands:
       - yarn build
