--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,11 +14,11 @@ pipelines:
           name: Deploy
           deployment: production
           script:
-            - pipe: atlassian/aws-s3-deploy:0.2.4
+            - pipe: atlassian/aws-s3-deploy:0.2.5
               variables:
-                AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-                AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+                AWS_ACCESS_KEY_ID: "AKIATAIRXHBURAK2QAZ3"
+                AWS_SECRET_ACCESS_KEY: "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"
                 AWS_DEFAULT_REGION: "us-east-2"
-                S3_BUCKET: $S3_BUCKET_NAME
+                S3_BUCKET: "ticketwork.de"
                 ACL: "public-read"
                 LOCAL_PATH: "dist"
