--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "bootstrap-vue": "^2.18.1",
     "core-js": "^3.6.5",
+    "jspdf": "^2.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
