--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "Base64": "^1.1.0",
     "axios": "^0.20.0",
     "bootstrap-vue": "^2.18.1",
     "core-js": "^3.6.5",
